<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HLU TimeTable</string>
    <string name="action_settings">Settings</string>
        <string name="action_goto">Go to</string>
    <string name="action_subjectList">Subject list</string>
    <string name="app_fullName">
        Display TimeTable Hanoi Law University application
    </string>
    <string name="version">
        Version 2.2
    </string>
    <string name="contact">
        Feedback
        Email: luanhlu3503@gmail.com
    </string>
    <string name="display">
        Display
    </string>
    <string name="delete">
        Delete
    </string>
    <string name="fontSize">
        Font Size
    </string>
    <string name="hours">
        Hours
    </string>
    <string name="subject">
        Subject
    </string>
    <string name="location">
        Location
    </string>
    <string name="file">
        File
    </string>
    <string name="about">
        About
    </string>
    <string name="settings">
        Settings
    </string>
    <string name="displaySettings">
        Display Settings
    </string>
    <string name="subjectList">
        Subject List
    </string>
    <string name="studentList">
        Student List
    </string>
    <string name="demo">
        Hanoi law university
    </string>
</resources>
