<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="#000"
        android:gravity="top"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:contentDescription=""
            android:src="@drawable/ic_launcher"
            android:layout_margin="10dp"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_fullName"
            android:id="@+id/textView"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:id="@+id/textView2"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:id="@+id/textView3"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>
</LinearLayout>
