<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/viewFlipper">

    <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView"
                android:background="#000"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearMain"
                android:background="#fff">

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="5dp"
                    android:background="#000"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hours"
                        android:id="@+id/textView"
                        android:maxWidth="80dp"
                        android:minWidth="80dp"
                        android:textColor="#fff"
                        android:textSize="17dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subject"
                        android:id="@+id/textView2"
                        android:textColor="#fff"
                        android:textSize="17dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:id="@+id/textView3"
                        android:layout_marginRight="5dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:textColor="#fff"
                        android:maxWidth="70dp"
                        android:minWidth="70dp"
                    android:textSize="17dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>