<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ViewSettings"
        android:background="#000"
        >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="#fff"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#000"
                android:id="@+id/relativeLayout4"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:layout_marginBottom="0.5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file"
                    android:id="@+id/textView9"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:layout_alignTop="@+id/btnBrown"
                    android:layout_alignLeft="@+id/fileNameChooser"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chọn File nguồn"
                    android:id="@+id/textView10"
                    android:textColorHighlight="#fff"
                    android:textSize="14dp"
                    android:textIsSelectable="false"
                    android:layout_below="@+id/textView9"
                    android:layout_alignLeft="@+id/fileNameChooser"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Brown"
                    android:id="@+id/btnBrown"
                    android:background="#fff"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:minHeight="40dp"
                    android:textSize="18dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fileNameChooser"
                    android:textColor="#c8c8c8"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/textView10"
                    android:layout_marginTop="20dp"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="86dp"
                android:background="#000"
                android:id="@+id/relativeAccounts"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="0.5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/displaySettings"
                    android:id="@+id/textView3"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="93dp"
                android:background="#000"
                android:id="@+id/relativeAbout"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="0.5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:id="@+id/textView7"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>